# flight-price-tracker

./: README.md  analyze.py  config.yaml  fetch_prices.py  pyproject.toml
.github/workflows/: lint.yml  price-tracker.yml
